Fix links that open hidden content or perform other actions jumping the user to the top of the page

--- a/thrimbletrimmer/styles/thrimbletrimmer.css
+++ b/thrimbletrimmer/styles/thrimbletrimmer.css
@@ -42,6 +42,10 @@ a,
 	cursor: pointer;
 }
 
+a.click {
+	text-decoration: underline;
+}
+
 .input-error {
 	border-color: #b00;
 }
